--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <h2> Préparation </h2>
                 
                 <table class= "preparation">
-                    <tr><td><p class="numero">1</p></td><td class="preparation_etape">Casser les oeufs et separer le blanc des jaunes.</td></tr>
-                    <tr><td><p class="numero">2</p></td><td class="preparation_etape">Mélanger la farine avec le lait de coco de manière homogène, puis ajouter l'huile.</td></tr>
-                    <tr><td><p class="numero">3</p></td><td class="preparation_etape">Ajouter les jaunes et bien mélanger.</td></tr>
-                    <tr><td><p class="numero">4</p></td><td class="preparation_etape">Monter les blancs en neige, à l'aide d'un batteur électrique, en ajoutant le sucre progréssivement, bien les serrer.</td></tr>
-                    <tr><td><p class="numero">5</p></td><td class="preparation_etape">A l'aide d'une maryse, incorporer doucement les blancs dans l'appareil precedent, esseyez de garder un maximum la consistence légère et mousseuse.</td></tr>
-                    <tr><td><p class="numero">6</p></td><td class="preparation_etape">Enfourner en chaleur tournante à 180°C pendant 45min.</td></tr>
-                    <tr><td><p class="numero">7</p></td><td class="preparation_etape">Laisser refroidir, puis démouler et deguster ce délicat gateau fluffy.</td></tr>
+                    <tr><td><p class="numero">1</p></td><td class="preparation_etape">Cassez les oeufs et separez le blanc des jaunes.</td></tr>
+                    <tr><td><p class="numero">2</p></td><td class="preparation_etape">Mélangez la farine avec le lait de coco de manière homogène, puis ajoutez l'huile.</td></tr>
+                    <tr><td><p class="numero">3</p></td><td class="preparation_etape">Ajoutez les jaunes et bien mélanger.</td></tr>
+                    <tr><td><p class="numero">4</p></td><td class="preparation_etape">Montez les blancs en neige, à l'aide d'un batteur électrique, en ajoutant le sucre progréssivement, bien les serrer.</td></tr>
+                    <tr><td><p class="numero">5</p></td><td class="preparation_etape">A l'aide d'une marise, incorporez doucement les blancs dans l'appareil precedent, esseyez de garder un maximum la consistence légère et mousseuse.</td></tr>
+                    <tr><td><p class="numero">6</p></td><td class="preparation_etape">Enfournez en chaleur tournante à 180°C pendant 45min.</td></tr>
+                    <tr><td><p class="numero">7</p></td><td class="preparation_etape">Laissez refroidir, puis démoulez et degustez ce délicat gateau fluffy.</td></tr>
                 </table>
 
             </div>
