--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <p class = "categorie">Recette</p>
         </div>
         <div class="contenu">
-            <h1>Gateau au pandan</h1>
+            <h1>Gâteau au pandan</h1>
             <div class="trait">
             </div>
             <br> 
             <div class="centre">          
-            <p class="description">Voici le delicieux et fluffy gateau au pandan, recette incontournable qui ravira petits et grands, à deguster sans regrets. </p>
+            <p class="description">Voici le delicieux et fluffy gâteau au pandan, recette incontournable qui ravira petits et grands, à deguster sans regrets. </p>
             </div>
             <br>
             <div style="position: relative;">
@@ -42,12 +42,12 @@
             <div class="colonne1 colonne">
                 <h2> Ingrédients : </h2>
                 <div class="liste">
-                    <p>arome pandan : 2 c.c </p>
+                    <p>Arôme pandan : 2 c.c </p>
                     <p>Sucre : 200gr</p>
-                    <p>huile : 75ml</p>
+                    <p>Huile : 75ml</p>
                     <p>Oeuf : 8</p>
                     <p>Farine : 200gr</p>
-                    <p>lait de coco : 40cl</p>
+                    <p>Lait de coco : 40cl</p>
                     <p>1 pincée de sel</p>
                 </div>
             </div>
@@ -55,13 +55,13 @@
                 <h2> Préparation </h2>
                 
                 <table class= "preparation">
-                    <tr><td><p class="numero">1</p></td><td class="preparation_etape">Cassez les oeufs et separez le blanc des jaunes.</td></tr>
+                    <tr><td><p class="numero">1</p></td><td class="preparation_etape">Cassez les oeufs et séparez le blanc des jaunes.</td></tr>
                     <tr><td><p class="numero">2</p></td><td class="preparation_etape">Mélangez la farine avec le lait de coco de manière homogène, puis ajoutez l'huile.</td></tr>
                     <tr><td><p class="numero">3</p></td><td class="preparation_etape">Ajoutez les jaunes et bien mélanger.</td></tr>
                     <tr><td><p class="numero">4</p></td><td class="preparation_etape">Montez les blancs en neige, à l'aide d'un batteur électrique, en ajoutant le sucre progréssivement, bien les serrer.</td></tr>
                     <tr><td><p class="numero">5</p></td><td class="preparation_etape">A l'aide d'une marise, incorporez doucement les blancs dans l'appareil precedent, esseyez de garder un maximum la consistence légère et mousseuse.</td></tr>
                     <tr><td><p class="numero">6</p></td><td class="preparation_etape">Enfournez en chaleur tournante à 180°C pendant 45min.</td></tr>
-                    <tr><td><p class="numero">7</p></td><td class="preparation_etape">Laissez refroidir, puis démoulez et degustez ce délicat gateau fluffy.</td></tr>
+                    <tr><td><p class="numero">7</p></td><td class="preparation_etape">Laissez refroidir, puis démoulez et dégustez ce délicat gâteau fluffy.</td></tr>
                 </table>
 
             </div>
