--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <br> 
             <div class="centre">          
-            <p class="description">Voici le delicieux et fluffy gâteau au pandan, recette incontournable qui ravira petits et grands, à deguster sans regrets. </p>
+            <p class="description">Voici le délicieux et fluffy gâteau au pandan, recette incontournable qui ravira petits et grands, à deguster sans regrets. </p>
             </div>
             <br>
             <div style="position: relative;">
@@ -58,8 +58,8 @@
                     <tr><td><p class="numero">1</p></td><td class="preparation_etape">Cassez les oeufs et séparez le blanc des jaunes.</td></tr>
                     <tr><td><p class="numero">2</p></td><td class="preparation_etape">Mélangez la farine avec le lait de coco de manière homogène, puis ajoutez l'huile.</td></tr>
                     <tr><td><p class="numero">3</p></td><td class="preparation_etape">Ajoutez les jaunes et bien mélanger.</td></tr>
-                    <tr><td><p class="numero">4</p></td><td class="preparation_etape">Montez les blancs en neige, à l'aide d'un batteur électrique, en ajoutant le sucre progréssivement, bien les serrer.</td></tr>
-                    <tr><td><p class="numero">5</p></td><td class="preparation_etape">A l'aide d'une marise, incorporez doucement les blancs dans l'appareil precedent, esseyez de garder un maximum la consistence légère et mousseuse.</td></tr>
+                    <tr><td><p class="numero">4</p></td><td class="preparation_etape">Montez les blancs en neige, à l'aide d'un batteur électrique, en ajoutant le sucre progressivement, bien les serrer.</td></tr>
+                    <tr><td><p class="numero">5</p></td><td class="preparation_etape">A l'aide d'une marise, incorporez doucement les blancs dans l'appareil précédent, essayez de garder un maximum la consistence légère et mousseuse.</td></tr>
                     <tr><td><p class="numero">6</p></td><td class="preparation_etape">Enfournez en chaleur tournante à 180°C pendant 45min.</td></tr>
                     <tr><td><p class="numero">7</p></td><td class="preparation_etape">Laissez refroidir, puis démoulez et dégustez ce délicat gâteau fluffy.</td></tr>
                 </table>
